--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,12 @@ body {
 }
 
 .category-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.category-card img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
